--- a/reservation.html
+++ b/reservation.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>예약하기 - 케이크 무인 픽업대 앱</title>
+        <title>Cakeday 사장님용 앱</title>
         <script type="text/javascript" src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=x9fpw4u3bn"></script>
         <link rel="stylesheet" href="producer_styles.css" />
     </head>
     <body style="padding: 0">
         <header>
-            <h1>케이크 무인 픽업대 앱</h1>
+            <h1>Cakeday 사장님용 앱</h1>
         </header>
         
         <main style="padding: 0; margin: 0">
