--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <img src="CakeDay_logo.png" alt="logo" class="logo" />
-            <h1>케이크 무인 픽업대 앱</h1>
+            <h1>Cakeday 사장님용 앱</h1>
         </header>
         <main>
             <section id="intro">
