--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             <h1>Cakeday 사장님용 앱</h1>
         </header>
         <main>
+            <script type="text/javascript">
+                window.location.href = 'startpage.html';
+            </script>
             <section id="intro">
                 <h2>환영합니다!</h2>
                 <p class="subtext">케이크 무인 픽업대 앱을 통해 편리하게 케이크를 예약하고 픽업하세요.</p>
